fixing employee index again

--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -242,6 +242,10 @@
     <Compile Include="Migrations\201807261755411_IdentityUserModelWork.Designer.cs">
       <DependentUpon>201807261755411_IdentityUserModelWork.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807261826468_Test1.cs" />
+    <Compile Include="Migrations\201807261826468_Test1.Designer.cs">
+      <DependentUpon>201807261826468_Test1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -372,6 +376,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807261755411_IdentityUserModelWork.resx">
       <DependentUpon>201807261755411_IdentityUserModelWork.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807261826468_Test1.resx">
+      <DependentUpon>201807261826468_Test1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
