--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -242,6 +242,10 @@
     <Compile Include="Migrations\201807301249382_MondayUpdate.Designer.cs">
       <DependentUpon>201807301249382_MondayUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807301920572_FKeyAddedToEmployee.cs" />
+    <Compile Include="Migrations\201807301920572_FKeyAddedToEmployee.Designer.cs">
+      <DependentUpon>201807301920572_FKeyAddedToEmployee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -373,6 +377,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807301249382_MondayUpdate.resx">
       <DependentUpon>201807301249382_MondayUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807301920572_FKeyAddedToEmployee.resx">
+      <DependentUpon>201807301920572_FKeyAddedToEmployee.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
