--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -333,6 +333,7 @@
     <Content Include="Views\Customers\Extra.cshtml" />
     <Content Include="Views\Customers\Balance.cshtml" />
     <Content Include="Views\Customers\Suspension.cshtml" />
+    <Content Include="Views\Employees\Map.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
