--- a/TrashCollector/TrashCollector.csproj
+++ b/TrashCollector/TrashCollector.csproj
@@ -341,6 +341,7 @@
     <Content Include="Views\Customers\Balance.cshtml" />
     <Content Include="Views\Customers\Suspension.cshtml" />
     <Content Include="Views\Employees\Map.cshtml" />
+    <Content Include="Views\Employees\MapAll.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
